# relationdb

./: README.md  README.rst  initialise.py  main.py  pyproject.toml  readme.md  test.ipynb
relationdb/: __init__.py  base_model.py  models.py  object.py  tag.py
tests/: test_relationdb.py
