[tool.poetry]
name = "relationdb"
version = "0.0.1"
description = ""
authors = ["Johnystar <johnystar@pm.me>"]
readme = "README.rst"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.14.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
docutils = "^0.18.1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
